--- a/UseNetApplication/MainWindow.xaml
+++ b/UseNetApplication/MainWindow.xaml
@@ -5,18 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UseNetApplication"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="800" Width="1200">
 
     <Grid Background="DarkSlateGray">
-        <TextBox x:Name="terminal" Background="Black" Foreground="DarkGreen" IsReadOnly="True" HorizontalAlignment="Right" VerticalAlignment="Center" Height="273" Width="250" Margin="0,48,10,98"></TextBox>
-        <ListView x:Name="NewsgroupList" Background="Black" Foreground="DarkGreen" HorizontalAlignment="Right" VerticalAlignment="Center" Height="273" Width="250" Margin="0,48,265,98"></ListView>
+        <TextBox x:Name="terminal" Background="Black" Foreground="LightGreen" IsReadOnly="True" HorizontalAlignment="Right" VerticalAlignment="Center" Height="625" Width="473" Margin="0,52,10,92"></TextBox>
+        <ListView x:Name="NewsgroupList" Background="Black" Foreground="DarkGreen" HorizontalAlignment="Right" VerticalAlignment="Center" Height="627" Width="371" Margin="0,52,505,90"></ListView>
 
-        <Label Content="Send Message" HorizontalAlignment="Right" VerticalAlignment="Bottom" Foreground="Gray" FontSize="24" Margin="0,0,97,50" RenderTransformOrigin="0.919,0.429"></Label>
-        <TextBox x:Name="InputText" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="335" Height="30" Margin="0,0,10,25" KeyUp="InputText_KeyUp"></TextBox>
+        <Label Content="Send Message" HorizontalAlignment="Right" VerticalAlignment="Bottom" Foreground="Gray" FontSize="24" Margin="0,0,164,50" RenderTransformOrigin="0.919,0.429"></Label>
+        <TextBox x:Name="InputText" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="473" Height="30" Margin="0,0,10,25" KeyUp="InputText_KeyUp"></TextBox>
 
-        <Button x:Name="CreateUser" Background="DimGray" Foreground="LightGreen" FontSize="18" Content="Create User" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="25,0,0,341" Click="CreateUser_Click" Height="30"></Button>
-        <Button x:Name="ConnectUsenetButton" Content="Connect" HorizontalAlignment="Left" VerticalAlignment="Center" Background="DimGray" Foreground="LightGreen" FontSize="18" Margin="25,83,0,305" Width="96" Height="31" Click="ConnectUsenetButton_Click"></Button>
-        <Button x:Name="InputButton" Content="Send" HorizontalAlignment="Center" VerticalAlignment="Bottom" Background="DimGray" Foreground="LightGreen" FontSize="18" Margin="392,0,350,25" Height="30" Width="50" Click="InputButton_Click"></Button>
-        <Button x:Name="ViewUsersFileBrowser" Content="View Users" HorizontalAlignment="Left" VerticalAlignment="Bottom" Background="DimGray" Foreground="LightGreen" FontSize="18" Margin="25,0,0,25" Height="30" Click="DeleteUserFileBrowser_Click"></Button>
+        <Button x:Name="CreateUser" Background="DimGray" Foreground="LightGreen" FontSize="18" Content="Create User" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="25,0,0,631" Click="CreateUser_Click" Height="30" Width="100"></Button>
+        <Button x:Name="ConnectUsenetButton" Content="Connect" HorizontalAlignment="Left" VerticalAlignment="Center" Background="DimGray" Foreground="LightGreen" FontSize="18" Margin="25,52,0,686" Width="100" Height="31" Click="ConnectUsenetButton_Click"></Button>
+        <Button x:Name="InputButton" Content="Send" HorizontalAlignment="Center" VerticalAlignment="Bottom" Background="DimGray" Foreground="LightGreen" FontSize="18" Margin="637,0,505,25" Height="30" Width="50" Click="InputButton_Click"></Button>
+        <Button x:Name="ViewUsersFileBrowser" Content="View Users" HorizontalAlignment="Left" VerticalAlignment="Bottom" Background="DimGray" Foreground="LightGreen" FontSize="18" Margin="25,0,0,574" Height="30" Click="ViewUserFiles_click"></Button>
     </Grid>
 </Window>
