--- a/UseNetApplication/MainWindow.xaml
+++ b/UseNetApplication/MainWindow.xaml
@@ -8,8 +8,8 @@
         Title="MainWindow" Height="800" Width="1200">
 
     <Grid Background="DarkSlateGray">
-        <TextBox x:Name="terminal" ScrollViewer.CanContentScroll="True" Foreground="LightGreen" BorderThickness="3" BorderBrush="AntiqueWhite" IsReadOnly="True" HorizontalAlignment="Right" VerticalAlignment="Center" Height="627" Width="602" Margin="0,50,10,92" Background="Black" TextWrapping="WrapWithOverflow"/>
-        <ListView x:Name="NewsgroupList" Background="Black" BorderThickness="3" BorderBrush="AntiqueWhite" Foreground="LightGreen" HorizontalAlignment="Right" VerticalAlignment="Center" Height="627" Width="371" Margin="0,50,629,92"></ListView>
+        <TextBox x:Name="terminal" Foreground="LightGreen" BorderThickness="3" BorderBrush="AntiqueWhite" IsReadOnly="True" HorizontalAlignment="Right" VerticalAlignment="Center" Height="627" Width="602" Margin="0,50,10,92" Background="Black" TextWrapping="WrapWithOverflow"/>
+        <ListView x:Name="NewsgroupList" MouseDoubleClick="NewsgroupList_MouseDoubleClick" Background="Black" BorderThickness="3" BorderBrush="AntiqueWhite" Foreground="LightGreen" HorizontalAlignment="Right" VerticalAlignment="Center" Height="627" Width="371" Margin="0,50,629,92"></ListView>
 
         <Label Content="Send Message" HorizontalAlignment="Right" VerticalAlignment="Bottom" Foreground="Gray" FontSize="24" Margin="0,0,164,50" RenderTransformOrigin="0.919,0.429"></Label>
         <TextBox x:Name="InputText" IsEnabled="False" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="473" Height="30" Margin="0,0,10,25" KeyUp="InputText_KeyUp" FontSize="16"></TextBox>
